# newguy-server

./: .gitignore  deploy.sh  newguy-server.cabal  servant-persistent.cabal  stack.yaml
app/: Main.hs
assets/: api.js
src/: Api.hs  Auth.hs  Config.hs  Models.hs  OrganizationRole.hs
src/Api/: Animal.hs  Login.hs  Organization.hs  User.hs  Yard.hs
src/Models/: Organization.hs
