name:                newguy-server
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Justin Watt
maintainer:          justinwatt@gmail.com
copyright:           2016 Justin Watt
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/justinwatt/newguy-server

executable newguy-server
    main-is:
        Main.hs
    build-depends:
        base >=4.7 && <4.9
      , containers
      , newguy-server 
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , safe
      , text
      , jwt

    hs-source-dirs:
        app   
    default-language:
        Haskell2010

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Models
      , Api
      , Api.User
      , Api.Organization
      , Auth
      , OrganizationRole
    build-depends: 
        base >= 4.7 && < 4.9
      , aeson
      , bytestring
      , email-validate
      , containers
      , either >= 4.4.1.1
      , esqueleto
      , jwt >= 0.7.2
      , monad-control
      , monad-logger
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , pwstore-fast
      , servant >= 0.8 && <= 0.9
      , servant-js >= 0.8 && < 0.9
      , servant-server >= 0.8 && < 0.9
      , string-conversions
      , transformers
      , text
      , time
      , users
      , users-persistent
      , wai
      , wai-extra
      , warp


test-suite newguy-server-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
    build-depends:
        base
      , servant-persistent
      , containers
      , QuickCheck
      , hspec
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010
